# SPDX-FileCopyrightText: 2021 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "projvar"
version = "0.10.0"
edition = "2021"
description = """
    A tiny CLI tool that tries to gather project specific meta-data in different ways,
    to store them into environment variables in a file
    for later use by other tools.
    See --list for the keys set by this tool.
    """
repository = "https://github.com/hoijui/repvar"
keywords = ["cli", "ci"]
categories = ["command-line-utilities", "text-processing"]
license = "GPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
publish = false

[dependencies]
askalono = "0.4.4"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.4", features = ["cargo"] }
enum-map = "2.0.0-2"
git-url = "0.3"
git2 = { version = "0.13", default-features = false } # "default-features = false" is required for MUSL compatibility, to get rid of OpenSSL
# git-url-parse = "0.4"
human-panic = "1.0.3"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5"
remain = "0.2.2"
repvar = { git = "https://github.com/hoijui/repvar.git" }
# repvar = { path = "../repvar" }
simplelog = "0.11.0"
spdx = "0.8.0"
strum = "0.24"
strum_macros = "0.24"
#enumset = "1.0.7"
thiserror = "1"
url = "2.2.2"

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
cmd_lib = "1.3"
const-fnv1a-hash = "1.0.1"
directories = "4.0"
fake = { version = "2.4", features = ['chrono', 'uuid'] }
predicates = "2.1"
uuid = "0.8"
