# SPDX-FileCopyrightText: 2021 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "projvar"
version = "0.11.0"
edition = "2021"
description = """
    A tiny CLI tool that tries to gather project specific meta-data in different ways,
    to store them into environment variables in a file
    for later use by other tools.
    See --list for the keys set by this tool.
    """
repository = "https://github.com/hoijui/repvar"
keywords = ["cli", "ci"]
categories = ["command-line-utilities", "text-processing"]
license = "GPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
publish = false

[dependencies]
askalono = "0.4"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "derive"] }
const_format = "0.2"
enum-map = "2.4"
git-url = "0.8"
git2 = { version = "0.15", default-features = false } # "default-features = false" is required for MUSL compatibility, to get rid of OpenSSL
# git-url-parse = "0.4"
human-panic = "1.0"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
remain = "0.2"
repvar = { git = "https://github.com/hoijui/repvar.git" }
# repvar = { path = "../repvar" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
simplelog = "0.12"
spdx = "0.9"
strum = "0.24"
strum_macros = "0.24"
#enumset = "1.0.7"
thiserror = "1.0"
url = "2.2"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
cmd_lib = "1.3"
const-fnv1a-hash = "1.1"
directories = "4.0"
fake = { version = "2.5", features = ['chrono', 'uuid'] }
predicates = "2.1"
uuid = "1.1"
