# SPDX-FileCopyrightText: 2021 - 2025 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "projvar"
version = "0.19.6"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A tiny CLI tool that tries to gather project specific meta-data in different ways,
    to store them into key=value pairs in a file
    for later use by other tools.
    See --list for the keys set by this tool.
    """
repository = "https://github.com/hoijui/projvar"
homepage = "https://github.com/hoijui/projvar"
keywords = ["cli", "ci", "utility", "parsing", "git"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "allow"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
option_if_let_else = "allow"

[dependencies]
askalono = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive"] }
cli_utils = { version = "0.10", package = "cli_utils_hoijui" }
const_format = "0.2"
enum-map = "2.7"
git-version = "0.3"
git2 = { version = "0.20", default-features = false } # "default-features = false" is required for MUSL compatibility, to get rid of OpenSSL
gix-url = "0.29"
# git-url-parse = "0.4"
human-panic = "2.0"
log = "0.4"
proc-macro2 = "1.0"
regex = "1.10"
remain = "0.2"
repvar = "0.14"
# repvar = { path = "../repvar" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
spdx = "0.10"
strum = "0.27"
strum_macros = "0.27"
#enumset = "1.0.7"
thiserror = "2.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3" }
url = "2.5"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
cmd_lib = "1.9"
const-fnv1a-hash = "1.1"
directories = "6.0"
fake = { version = "4.0", features = ['chrono', 'uuid'] }
predicates = "3.0"
uuid = "1.6"
